<resources>
    <string name="app_name">TestSdk</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>

    <!-- Error messages -->
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="init_dive">PLAY</string>
    <string name="movie_time">Movie Time</string>
    <string name="dive_pause">PAUSE</string>
    <string name="dive_resume">RESUME</string>
    <string name="dive_stop">STOP</string>
    <string name="dive_seek">SEEK</string>
    <string name="satc2">Sexo en Nueva York 2</string>
    <string name="spider">Spider-man</string>
    <string name="bigbang">Big Bang Theory S01E01</string>
    <string name="dive_tve1">TVE1</string>
    <string name="dive_tnt">TNT</string>
    <string name="dive_ms">MOVISTAR SERIES</string>
    <string name="dive_cc">COMEDY CENTRAL</string>
    <string name="dive_neox">NEOX</string>
    <string name="dive_me">MOVISTAR ESTRENOS</string>
    <string name="check_channels">CHECK CHANNELS</string>
</resources>
