<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@android:color/black">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/movie_time" />

            <Button
                android:id="@+id/btn_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/init_dive" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dive_pause" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_resume_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/movie_time" />

            <Button
                android:id="@+id/btn_resume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dive_resume" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_seek_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/movie_time" />

            <Button
                android:id="@+id/btn_seek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dive_seek" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dive_stop" />

    </LinearLayout>



    <FrameLayout
        android:id="@+id/dive_view"
        android:layout_width="match_parent"
        android:layout_height="217dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        tools:ignore="MergeRootFrame"
        tools:layout_editor_absoluteX="0dp"
        android:visibility="gone"/>
</RelativeLayout>